# AI-interview-system

./: .gitignore  README.md  interview_system.db  main.py  pyproject.toml  requirements.txt
data/: questions_ds.json
static/: style.css
static/css/: chatbot.css  style.css
static/js/: chatbot.js
templates/: base.html  index.html  interview.html  report.html
